packages/core/test/service/fixtures/invalid_case/case2.ok.ts
export default {
  default: {
    a: 1,
    b: 2
  },
  bbb: '123'
};
